<?xml version="1.0" encoding="utf-8"?>
<!--  
  Copyright (c) 2010, University of Victoria
  All rights reserved.
  
  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are met:
  
  1. Redistributions of source code must retain the above copyright
     notice, this list of conditions and the following disclaimer.
  2. Redistributions in binary form must reproduce the above copyright
     notice, this list of conditions and the following disclaimer in the
     documentation and/or other materials provided with the distribution.
  3. All advertising materials mentioning features or use of this software
     must display the following acknowledgement:
     
     This product includes software developed by the University of Victoria.
  
  4. Neither the name of the University of Victoria nor the
     names of its contributors may be used to endorse or promote products
     derived from this software without specific prior written permission.
     
  THIS SOFTWARE IS PROVIDED BY THE University of Victoria ''AS IS'' AND ANY
  EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  DISCLAIMED. IN NO EVENT SHALL THE University of Victoria BE LIABLE FOR ANY
  DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentTop="true">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/icon"/>
		<LinearLayout
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="10dp"
			android:orientation="vertical">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="25dp"
				android:textStyle="bold" 
				android:text="@string/label_full_name" />
			<TextView android:id="@+id/temp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/label_tagline"	/>		
		</LinearLayout>
	</LinearLayout>
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="14dp"
		android:gravity="center"
		android:paddingTop="5dip"
		android:text="@string/msg_about_neptube"
		/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentTop="true">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/application_go"/>
		<LinearLayout
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="10dp"
			android:orientation="vertical">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:textStyle="bold"
				android:text="@string/label_website" />
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/msg_neptube_url"
				android:autoLink="web" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentTop="true">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/wrench_orange"/>
		<LinearLayout
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="10dp"
			android:orientation="vertical">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:textStyle="bold"
				android:text="@string/label_lead_programmer" />
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/team_member_name_4"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentTop="true">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/phone"/>
		<LinearLayout
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="10dp"
			android:orientation="vertical">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:textStyle="bold"
				android:text="@string/label_team" />
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/team_member_name_1"/>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/team_member_name_2"/>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/team_member_name_3"/>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/team_member_name_4"/>								
		</LinearLayout>
	</LinearLayout>
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18dp"
		android:textStyle="bold"
		android:gravity="center"
		android:paddingLeft="20dp"
		android:paddingBottom="10dp"
		android:text="@string/label_acknowledgement" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentTop="true">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/world"/>
		<LinearLayout
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="10dp"
			android:orientation="vertical">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:textStyle="bold"
				android:text="@string/msg_acknowledgement_1" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/msg_acknowledgement_2"/>	
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentTop="true">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:src="@drawable/fav"/>
		<LinearLayout
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="10dp"
			android:orientation="vertical">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:textStyle="bold"
				android:text="@string/msg_acknowledgement_3" />
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/msg_acknowledgement_4" />
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14dp"
				android:text="@string/msg_famfamfam_url"
				android:autoLink="web" />
		</LinearLayout>
	</LinearLayout>		
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="14dp"
		android:textStyle="italic"
		android:paddingLeft="20dp"
		android:paddingTop="10dp"
		android:text="@string/msg_google_disclaimer"/>
	
</LinearLayout>
</ScrollView>