<?xml version="1.0" encoding="utf-8"?>
<!--  
  Copyright (c) 2010, University of Victoria
  All rights reserved.
  
  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are met:
  
  1. Redistributions of source code must retain the above copyright
     notice, this list of conditions and the following disclaimer.
  2. Redistributions in binary form must reproduce the above copyright
     notice, this list of conditions and the following disclaimer in the
     documentation and/or other materials provided with the distribution.
  3. All advertising materials mentioning features or use of this software
     must display the following acknowledgement:
     
     This product includes software developed by the University of Victoria.
  
  4. Neither the name of the University of Victoria nor the
     names of its contributors may be used to endorse or promote products
     derived from this software without specific prior written permission.
     
  THIS SOFTWARE IS PROVIDED BY THE University of Victoria ''AS IS'' AND ANY
  EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  DISCLAIMED. IN NO EVENT SHALL THE University of Victoria BE LIABLE FOR ANY
  DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/devicedetails_linearlayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		<TextView android:id="@+id/devicedetails_header"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:gravity="center"
			android:textSize="20sp"
			android:textStyle="bold"/>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="15dp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:paddingRight="5dp"
					android:text="@string/label_location"/>
				<TextView android:id="@+id/devicedetails_location"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>						
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">	
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:paddingRight="5dp"
					android:text="@string/label_lat"/>
				<TextView android:id="@+id/devicedetails_lat"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">	
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:paddingRight="5dp"
					android:text="@string/label_long"/>
				<TextView android:id="@+id/devicedetails_long"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>			
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">				
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:paddingRight="5dp"
					android:text="@string/label_depth"/>
				<TextView android:id="@+id/devicedetails_depth"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">				
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:paddingRight="5dp"
					android:text="@string/label_last_updated"/>
				<TextView android:id="@+id/devicedetails_time"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>	
			</LinearLayout>
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="@color/divider_grey" />
		<TableLayout android:id="@+id/sensor_tablelayout"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
		</TableLayout>
		<TextView android:id="@+id/disclaimer_sensor_id"
					android:text="@string/msg_disclaimer_sensor"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="5px"
					android:paddingTop="20px"
					android:paddingRight="5px"
					android:paddingBottom="20px"/>	
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
				android:padding="5dp">		
			<Button android:id="@+id/devicedetails_prevlocationsbutton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/btn_previous_locations"/>	
			<Button android:id="@+id/devicedetails_favbutton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>	
	</LinearLayout>
</ScrollView>